// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Sheet - does not render with data-require-action if it is set to false 1`] = `
<div
  className="sheet"
  data-require-action={null}
>
  <section>
    

    <div
      className="sheet-header"
    >
      <h2
        className="mb-0"
      >
        Test
      </h2>
      <button
        className="sheet-close"
        id="sheetClose"
      >
        
			
        <i
          aria-label="Close sheet"
          className="material-icons"
        >
          close
        </i>
        
		
      </button>
    </div>
    <div
<<<<<<< HEAD
      className="sheet-content"
=======
      className="sheet-content "
>>>>>>> f0afb46680c64bf50e9d96db4a575db046a78570
    />
  </section>
</div>
`;

exports[`Component: Sheet - renders 1`] = `
<div
  className="sheet"
  data-require-action={null}
>
  <section>
    

    <div
      className="sheet-header"
    >
      <h2
        className="mb-0"
      >
        Test
      </h2>
      <button
        className="sheet-close"
        id="sheetClose"
      >
        
			
        <i
          aria-label="Close sheet"
          className="material-icons"
        >
          close
        </i>
        
		
      </button>
    </div>
    <div
<<<<<<< HEAD
      className="sheet-content"
=======
      className="sheet-content "
>>>>>>> f0afb46680c64bf50e9d96db4a575db046a78570
    />
  </section>
</div>
`;

exports[`Component: Sheet - renders with a close icon 1`] = `
<div
  className="sheet"
  data-require-action={null}
>
  <section>
    

    <div
      className="sheet-header"
    >
      <h2
        className="mb-0"
      >
        test
      </h2>
      <button
        className="sheet-close"
        id="sheetClose"
      >
        
			
        <i
          aria-label="Close sheet"
          className="material-icons"
        >
          close
        </i>
        
		
      </button>
    </div>
    <div
<<<<<<< HEAD
      className="sheet-content"
=======
      className="sheet-content "
>>>>>>> f0afb46680c64bf50e9d96db4a575db046a78570
    />
  </section>
</div>
`;

exports[`Component: Sheet - renders with an ID 1`] = `
<div
  className="sheet"
  data-require-action={null}
  id="demo-sheet"
>
  <section>
    

    <div
      className="sheet-header"
    >
      <h2
        className="mb-0"
      >
        Test
      </h2>
      <button
        className="sheet-close"
        id="sheetClose"
      >
        
			
        <i
          aria-label="Close sheet"
          className="material-icons"
        >
          close
        </i>
        
		
      </button>
    </div>
    <div
<<<<<<< HEAD
      className="sheet-content"
=======
      className="sheet-content "
>>>>>>> f0afb46680c64bf50e9d96db4a575db046a78570
    />
  </section>
</div>
`;

exports[`Component: Sheet - renders with children 1`] = `
<div
  className="sheet"
  data-require-action={null}
>
  <section>
    

    <div
      className="sheet-header"
    >
      <h2
        className="mb-0"
      >
        Test
      </h2>
      <button
        className="sheet-close"
        id="sheetClose"
      >
        
			
        <i
          aria-label="Close sheet"
          className="material-icons"
        >
          close
        </i>
        
		
      </button>
    </div>
    <div
<<<<<<< HEAD
      className="sheet-content"
=======
      className="sheet-content "
>>>>>>> f0afb46680c64bf50e9d96db4a575db046a78570
    >
      Test
    </div>
  </section>
</div>
`;

exports[`Component: Sheet - renders with the data-require-action attribute 1`] = `
<div
  className="sheet"
  data-require-action={true}
>
  <section>
    

    <div
      className="sheet-header"
    >
      <h2
        className="mb-0"
      >
        Test
      </h2>
      <button
        className="sheet-close"
        id="sheetClose"
      >
        
			
        <i
          aria-label="Close sheet"
          className="material-icons"
        >
          close
        </i>
        
		
      </button>
    </div>
    <div
<<<<<<< HEAD
      className="sheet-content"
=======
      className="sheet-content "
>>>>>>> f0afb46680c64bf50e9d96db4a575db046a78570
    />
  </section>
</div>
`;
